# LinuxMiniPrograms

./: .gitignore  BeforeAdd.sh  In_case_of_fire.sh  Install.md  LICENSE  License.md  News.md  Readme.md  TODO  TODO.md  Todo.md  Version.md  configure  install.sh
Auto Zip/: Usage  autounzip  autozip
AutoZip/: .gitignore  AutoZip.tex  Usage  autounzip  autozip  autozip.Usage  libautozip
BashHistorySearcher/: bhs
INSTALLER/: .gitignore  FindPython  adoc2usage  adoc2usage_phase2.py  ascii2usage  configpath  configpy
LMP_Pylib/: libisopt.py  libmktbl.py  libmktemp.py  libpath.py  libs.py  libstr.py  libylfile.py
LibDOManager/: Example.txt  libdo_man  libdoman  table
Livechat/: lcman  livechat
PATHls/: pls
Parallel GZIP/: pgzip
Process Snapshot Searcher/: pss
ProcessSnapshotSearcher/: pss
Publish/: .gitignore  AutoZip.bib  AutoZip.tex  SelfArx.cls  autoremove.bat
doc/: autozip.usage  bhs.usage  lcman.usage  libdo.usage  libdoman.usage  livechat.usage  pls.usage  pss.usage  yldoc.usage
etc/: yldoc.conf
lib/: libautozip  libdate  libdo  libdo3  libfindpython  libisopt  libman  libmktbl  libmktbl.py  libmktbl.sh  libnet  libpath  libpb  libstr
libpy/: install.sh  setup.py
livechat/: lcman  (+1 more)
src/C/: .gitignore  CMakeLists.txt  Makefile  Readme.adoc
src/C/b16c/: Makefile  b16c.c
src/C/doc/man7/: libylstd.adoc
src/C/etc/: analyse.cppcheck
src/C/include/: Makefile  isopt.h  yuzjstd.h
src/C/lib/: Makefile  yuzjstd.c  yuzjstd_core.c  yuzjstd_io.c  yuzjstd_str.c
src/C/pst/: Makefile  pst.c
src/C/src/b16c/: Makefile
src/C/test/: cmain.c
(+341 files in other folders)
